setup for heroku

--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "pyramid-game",
   "main": "server.js",
   "dependencies": {
-    "express": "~4.5.1",
-    "mongoose": "^4.9.5",
-    "body-parser": "~1.4.2",
-    "method-override": "~2.0.2"
+    "express": "*",
+    "mongoose": "*",
+    "body-parser": "*",
+    "method-override": "*"
   },
   "scripts": {
     "start": "node server.js"
